# minesweeper

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: board.hpp  game.hpp  position.hpp  ui_fwd.hpp  ui_game.hpp
src/: board.cc  game.cc  minesweeper.cc  ui_game.cc
